# ResearchAgent

./: Cargo.toml  notes.txt
agent/: Cargo.toml
agent/src/: agent.rs  error.rs  lib.rs
agent/src/callbacks/: logger.rs  mod.rs
agent/src/llm/: mod.rs  openai.rs
agent/src/tools/: kv_memory.rs  mod.rs  summarize_history.rs
research/: Cargo.toml
research/src/: main.rs  research.rs
research/src/prompts/: orchestrator.md
